--- a/src/locales/by-BY.json
+++ b/src/locales/by-BY.json
@@ -7,5 +7,15 @@
   "SectionBenefitsItem3": "Выконваем нават самыя смелыя вашыя рашэнні",
   "SectionBenefitsItem4": "Высокая якасць вырабу. Усе зварныя стыкі старанна зачышчаюцца і паліруюцца",
   "SectionBenefitsItem5": "Вырабы выконваем \"пад ключ\". Ажыццяўляем дастаўку",
-  "SectionBenefitsItem6": "Адзін з этапаў вырабу - 3D візуалізацыя будучага вырабы"
+  "SectionBenefitsItem6": "Адзін з этапаў вырабу - 3D візуалізацыя будучага вырабы",
+  "category-all": "Усе",
+  "category-stairs": "Лесвіцы",
+  "category-stair_railing": "Лесвічныя агароджы",
+  "category-fence": "Агароджа",
+  "category-gates": "Вароты",
+  "category-gate": "Брамкі",
+  "category-marquises": "Навесы",
+  "category-pipes": "Дымнікі",
+  "category-address-plates": "Адрасныя таблічкі",
+  "category-other": "Другое"
 }
