--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -7,5 +7,15 @@
   "SectionBenefitsItem3": "Выполняем даже самые смелые Ваши решения",
   "SectionBenefitsItem4": "Высокое качество изготовления. Все сварные стыки тщательно зачищаются и полируются",
   "SectionBenefitsItem5": "Изделия выполняем “под ключ”. Осуществляем доставку",
-  "SectionBenefitsItem6": "Один из этапов изготовления - 3D визуализация будущего изделия"
+  "SectionBenefitsItem6": "Один из этапов изготовления - 3D визуализация будущего изделия",
+  "category-all": "Все",
+  "category-stairs": "Лестницы",
+  "category-stair_railing": "Лестничные ограждения",
+  "category-fence": "Ограждения",
+  "category-gates": "Ворота",
+  "category-gate": "Калитки",
+  "category-marquises": "Навесы",
+  "category-pipes": "Дымники",
+  "category-address-plates": "Адресные таблички",
+  "category-other": "Другое"
 }
