Add footer links functionality, add works store

--- a/src/locales/by-BY.json
+++ b/src/locales/by-BY.json
@@ -10,7 +10,7 @@
   "SectionBenefitsItem6": "Адзін з этапаў вырабу - 3D візуалізацыя будучага вырабы",
   "category-all": "Усе",
   "category-stairs": "Лесвіцы",
-  "category-stair_railing": "Лесвічныя агароджы",
+  "category-stair-railing": "Лесвічныя агароджы",
   "category-fence": "Агароджа",
   "category-gates": "Вароты",
   "category-gate": "Брамкі",
