--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -10,7 +10,7 @@
   "SectionBenefitsItem6": "Один из этапов изготовления - 3D визуализация будущего изделия",
   "category-all": "Все",
   "category-stairs": "Лестницы",
-  "category-stair_railing": "Лестничные ограждения",
+  "category-stair-railing": "Лестничные ограждения",
   "category-fence": "Ограждения",
   "category-gates": "Ворота",
   "category-gate": "Калитки",
